--- a/style.css
+++ b/style.css
@@ -11,4 +11,14 @@ body {
 
 #action-box {
   height: 50px;
+  display: flex;
+  gap: 20px;
+  align-items: center;
+  font-size: 20px;
+  font-family: sans-serif;
+  padding: 0px 5px;
+}
+
+button {
+  padding: 2px;
 }
